# game_RPG_project

./: CMakeLists.txt  README.md
GameCore/: FunctionsWithItems.cpp  classwithid.cpp  classwithid.h  functions.cpp  functions.h  functionsWithItems.h  gameobject.cpp  gameobject.h  inventory.cpp  inventory.h  roommanager.cpp  roommanager.h  specialfraction.cpp  specialfraction.h
GameCore/heroes/: basichero.cpp  basichero.h  simplehero.cpp  simplehero.h
GameCore/items/: basicitem.cpp  basicitem.h  itemfood.cpp  itemfood.h  itemweapon.cpp  itemweapon.h
GameCore/monsters/: basicmonster.cpp  basicmonster.h  simplemonster.cpp  simplemonster.h
GameCore/objects/: basicobject.cpp  basicobject.h  simpleobject.cpp  simpleobject.h
GameCore/rooms/: basicroom.cpp  basicroom.h  roomsimple.cpp  roomsimple.h
TheGame/: allFunctions.h  chooseroom.cpp  fightcycle.cpp  initialozationrooms.cpp  introduction.cpp  inventorycycle.cpp  iofunctions.cpp  itemview.cpp  main.cpp  mainmenu.cpp  objectlootcycle.cpp  other.cpp  roomsimplecycle.cpp
